<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/topGuideline"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="50dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/startGuideline"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="30dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/endGuideline"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_end="30dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name"
        style="@style/Widget.MaterialComponents.TextInputLayout.Auth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:hint="@string/name"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="@id/endGuideline"
        app:layout_constraintStart_toStartOf="@id/startGuideline"
        app:layout_constraintTop_toTopOf="@id/topGuideline">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nameEt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="14sp" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lastName"
        style="@style/Widget.MaterialComponents.TextInputLayout.Auth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:hint="@string/last_name"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="@id/endGuideline"
        app:layout_constraintStart_toStartOf="@id/startGuideline"
        app:layout_constraintTop_toBottomOf="@id/name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/lastNameEt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="14sp" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/registerEmail"
        style="@style/Widget.MaterialComponents.TextInputLayout.Auth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:hint="@string/email"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="@id/endGuideline"
        app:layout_constraintStart_toStartOf="@id/startGuideline"
        app:layout_constraintTop_toBottomOf="@id/lastName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/registerEmailEt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="14sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/birthDate"
        style="@style/Widget.MaterialComponents.TextInputLayout.Auth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:hint="@string/birthDate"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="@id/endGuideline"
        app:layout_constraintStart_toStartOf="@id/startGuideline"
        app:layout_constraintTop_toBottomOf="@id/registerEmail">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/birthDateEt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableEnd="@drawable/ic_calendar_selector"
            android:text="@string/yyyy_mm_dd"
            android:textSize="14sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/goOnRegistration"
        style="@style/Widget.MaterialComponents.Button.Auth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="50dp"
        android:drawablePadding="20dp"
        android:text="@string/next"
        app:layout_constraintEnd_toEndOf="@id/endGuideline"
        app:layout_constraintStart_toStartOf="@id/startGuideline"
        app:layout_constraintTop_toBottomOf="@id/birthDate" />


</androidx.constraintlayout.widget.ConstraintLayout>