<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/topGuideline"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="50dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/startGuideline"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="30dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/endGuideline"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_end="30dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phoneNumber"
        style="@style/Widget.MaterialComponents.TextInputLayout.Auth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone_number"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="@id/endGuideline"
        app:layout_constraintStart_toStartOf="@id/startGuideline"
        app:layout_constraintTop_toTopOf="@id/topGuideline">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phoneNumberEt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="14sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/personalId"
        style="@style/Widget.MaterialComponents.TextInputLayout.Auth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:hint="@string/personal_id"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="@id/endGuideline"
        app:layout_constraintStart_toStartOf="@id/startGuideline"
        app:layout_constraintTop_toBottomOf="@id/phoneNumber">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/personal_id_et"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="14sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/address"
        style="@style/Widget.MaterialComponents.TextInputLayout.Auth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:hint="@string/address"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="@id/endGuideline"
        app:layout_constraintStart_toStartOf="@id/startGuideline"
        app:layout_constraintTop_toBottomOf="@id/personalId">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/addressEt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="14sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password"
        style="@style/Widget.MaterialComponents.TextInputLayout.Auth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:hint="@string/password"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="@id/endGuideline"
        app:layout_constraintStart_toStartOf="@id/startGuideline"
        app:layout_constraintTop_toBottomOf="@id/address">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordEt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="14sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordConfirmation"
        style="@style/Widget.MaterialComponents.TextInputLayout.Auth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:hint="@string/password_confirmation"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="@id/endGuideline"
        app:layout_constraintStart_toStartOf="@id/startGuideline"
        app:layout_constraintTop_toBottomOf="@id/password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordConfirmationEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.Button.Auth"
        android:text="@string/back"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toStartOf="@+id/signUp"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordConfirmation" />

    <Button
        android:id="@+id/signUp"
        style="@style/Widget.MaterialComponents.Button.Auth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/back"
        app:layout_constraintTop_toBottomOf="@id/passwordConfirmation" />

</androidx.constraintlayout.widget.ConstraintLayout>