<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/topGuideline"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="50dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/startGuideline"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="30dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/endGuideline"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_end="30dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_pig"
        app:layout_constraintBottom_toTopOf="@id/logInEmail"
        app:layout_constraintEnd_toEndOf="@id/endGuideline"
        app:layout_constraintStart_toStartOf="@id/startGuideline" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/logInEmail"
        style="@style/Widget.MaterialComponents.TextInputLayout.Auth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="220dp"
        android:hint="@string/email"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="@id/endGuideline"
        app:layout_constraintStart_toStartOf="@id/startGuideline"
        app:layout_constraintTop_toTopOf="@id/topGuideline">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/logInEmailEt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="14sp" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password"
        style="@style/Widget.MaterialComponents.TextInputLayout.Auth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:hint="@string/password"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="@id/endGuideline"
        app:layout_constraintStart_toStartOf="@id/startGuideline"
        app:layout_constraintTop_toBottomOf="@id/logInEmail">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordEt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="14sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/login"
        style="@style/Widget.MaterialComponents.Button.Auth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:text="@string/log_in"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="@id/endGuideline"
        app:layout_constraintStart_toStartOf="@id/startGuideline"
        app:layout_constraintTop_toBottomOf="@id/password" />


    <TextView
        android:id="@+id/askSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="30dp"
        android:text="@string/arn_t_you"
        app:layout_constraintEnd_toEndOf="@id/endGuideline"
        app:layout_constraintStart_toStartOf="@id/startGuideline"
        app:layout_constraintTop_toBottomOf="@id/login"/>

    <Button
        android:id="@+id/signUp"
        style="@style/Widget.MaterialComponents.Button.TextButton.Auth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signed_up"
        app:layout_constraintBottom_toBottomOf="@id/askSignUp"
        app:layout_constraintStart_toEndOf="@id/askSignUp"
        app:layout_constraintTop_toTopOf="@id/askSignUp" />

</androidx.constraintlayout.widget.ConstraintLayout>